# BioSensGraph-WS

./: .gitignore  README.md  pyproject.toml
.dvc/: config
graph_link_prediction_pbg/: .gitignore  README.md  conf.json  dvc.yaml  params.yaml  pyproject.toml
graph_link_prediction_pbg/.dvc/: config
graph_link_prediction_pbg/conf/: config.yaml
graph_link_prediction_pbg/conf/edge_paths/: partitioned.yaml
graph_link_prediction_pbg/conf/import_data/: default.yaml
graph_link_prediction_pbg/conf/relations/: has_similarity.yaml  interacts_with.yaml
graph_link_prediction_pbg/data_split/: transductive_split.py
graph_link_prediction_pbg/inference/: inference_l2.py  inference_l2.sh
graph_link_prediction_pbg/pbg_configs/: import_from_tsv.py  train.py
graph_link_prediction_pbg/sbatch_tasks/: operator_affine.sh  operator_complex_diagonal.sh  operator_diagonal.sh  operator_linear.sh  operator_translation.sh  run_dvc_queue.sh
graph_link_prediction_pbg/tasks/: awk_parse_metrics.sh  eval_collect_all.sh  eval_collect_epochs.sh  graph_analysis.sh  import_from_tsv.sh  split.sh
similarity_counts/: .gitignore  pyproject.toml
similarity_counts/similarity_dna_rna/: sim_dna.py  sim_rna.py  similarity_dna_calculate.sh  similarity_rna_calculate.sh
similarity_counts/similarity_peptide/: sim_peptide.py  similarity_peptide_calculate.sh
similarity_counts/similarity_protein/alignment/: aligment.py  sim_protein.py  sim_protein_for_pairs.py  (+2 more)
similarity_counts/similarity_small_molecule/: config.py  fingerprints.py  io_utils.py  main.py  similarity.py  smiles_utils.py
(+30 files in other folders)
