[project]
name = "graph-link-prediction_pbg"
version = "0.1.0"
description = "Repository for experiments on graph link prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "torch>=2.8.0",
    "torchbiggraph",
    "dvc[s3]",
    "pykeen>=1.11.1",
    "python-igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "tqdm>=4.67.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "seaborn>=0.13.2",
    "ipykernel>=7.2.0",
]

[tool.uv.sources]
torchbiggraph = { git = "https://github.com/facebookresearch/PyTorch-BigGraph.git" }

[tool.uv.extra-build-dependencies]
torchbiggraph = ["torch"]
